src/objects/TR1__Qualification__c.object
<CustomObject>
    <fields>
        <fullName>Abbreviation__c</fullName>
        <label>Abbreviation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_safe_id__c</fullName>
        <formula>casesafeid(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case safe id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Date_Placeholder__c</fullName>
        <label>Date Placeholder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field_Set_ID_c__c</fullName>
        <label>Field Set ID (Comm)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Collection_Methods__c</fullName>
        <label>Collection Method(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Docusign</fullName>
                </value>
                <value>
                    <fullName>Field Update</fullName>
                </value>
                <value>
                    <fullName>Upload File</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Division 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Docusign_Template_ID__c</fullName>
        <label>Docusign Template ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TR1__Field_Set_ID__c</fullName>
        <label>Field Set ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Instructions_External__c</fullName>
        <inlineHelpText>Displayed in the Community</inlineHelpText>
        <label>Instructions (External)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Primary_Background__c</fullName>
        <label>Primary Background</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Background 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Type 1</fullName>
                </value>
                <value>
                    <fullName>Type 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Qualification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sort_Order__c</columns>
        <columns>TR1__Field_Set_ID__c</columns>
        <columns>Field_Set_ID_c__c</columns>
        <filterScope>Everything</filterScope>
        <label>All2</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>NAME</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Qualification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Qualifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>